crates/tmark-writers/tests/snapshots/fixtures__include-snippet-escaped@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
---8<--- \enquote{chapters/boot.md}

\begin{tscode}[lang=python]
--8<-- "hanoi.py"
\end{tscode}

---requires---
{
  "packages": [
    "csquotes",
    "fvextra",
    "tcolorbox"
  ],
  "fragments": [
    "ts-code"
  ],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
