crates/tmark-writers/tests/snapshots/fixtures__include-snippet-escaped@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
---8\<--- "chapters/boot.md"

```python
--8<-- "hanoi.py"
```

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
