crates/tmark-writers/tests/snapshots/fixtures__inline-icon@typst.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Click Settings.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
