crates/tmark-writers/tests/snapshots/fixtures__inline-insert-off@latex.snap
---
source: crates/tmark-writers/tests/fixtures.rs
expression: snapshot
---
Now \^{}\^{}inserted\^{}\^{} text.

---requires---
{
  "packages": [],
  "fragments": [],
  "shell_escape": false,
  "assets": [],
  "bibliography": false,
  "citations": [],
  "acronyms": [],
  "index": [],
  "counters": []
}
